--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,11 @@
 }
 @font-face{
     font-family: cinzelFont;
-    src: url(./../fonts/CinzelDecorative-Black.ttf);
+    src: url(./../fonts/CinzelDecorative-Bold.ttf);
 }
 @font-face{
     font-family: arabicFont;
-    src: url(./../fonts/NotoKufiArabic-SemiBold.ttf);
+    src: url(./../fonts/GE_Hili_Book.otf);
 }
 *{
     font-family: merriRegFont;
@@ -36,7 +36,8 @@ header h2 {
     font-family: merriBoldFont;
 }
 header .header-en h2{
-    font-size: 30px;
+    font-size: 35px;
+    line-height: 45px;
     font-family: cinzelFont;
 }
 header .header-en h2 sup{
@@ -53,8 +54,9 @@ header .header-en h2 .span2, header .header-en .h4{
 }
 header .header-ar h2{
     font-family: arabicFont;
-    font-size: 30px;
-    /* font-weight: bold; */
+    font-size: 45px;
+    line-height: 45px;
+    font-weight: bold;
 }
 header .header-ar, header .header-en{
     margin-top: 30px;
@@ -85,7 +87,7 @@ header .header-bottom .address{
     justify-content: center;
     padding: 10px;
     width: 100%;
-    margin: 30px auto;
+    margin: 20px auto;
     text-align: center;
     font-size: 18px;
 }
@@ -247,8 +249,9 @@ footer a.btn-danger{
 /* end footer */
 
 /* start media query */
+
 @media only screen and (max-width: 1199px) {
-    header .header-ar h2 {
+    header .header-ar h2, header .header-en h2 {
         font-size: 30px;
     }
 }
@@ -257,12 +260,12 @@ footer a.btn-danger{
         display: none;
     }
     header .header-ar h2{
-        font-size: 20px;
+        font-size: 30px;
         line-height: 30px;
         font-weight: normal;
     }
     header .header-en h2{
-        font-size: 20px !important;
+        font-size: 20px;
         line-height: 30px;
     }
     header .header-en h2 sup {
